--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -16,21 +16,21 @@
 <resources>
 
     <color name="quickcontact_name_detail_background">#66000000</color>
-    <color name="quickcontact_entry_sub_header_text_color">#b3ffffff</color>
-    <color name="quickcontact_entry_header_text_color">#ffffff</color>
+    <color name="quickcontact_entry_sub_header_text_color">#ffaaaaaa</color>
+    <color name="quickcontact_entry_header_text_color">#ffebebeb</color>
 
-    <color name="background_social_updates">#ff111111</color>
+    <color name="background_social_updates">#ff000000</color>
 
     <!-- TODO: remove these colors once we delete the group code (b/16522929) -->
-    <color name="action_bar_background">#0288d1</color>
-    <color name="action_bar_background_highlight">#cecece</color>
+    <color name="action_bar_background">#ff455a64</color>
+    <color name="action_bar_background_highlight">#ffb0bec5</color>
     <color name="action_bar_button_text_color">#FFFFFF</color>
 
     <color name="actionbar_background_color">@color/primary_color</color>
     <color name="actionbar_background_color_dark">@color/primary_color_dark</color>
 
-    <color name="primary_color_dark">#0277bd</color>
-    <color name="primary_color">#0288d1</color>
+    <color name="primary_color_dark">#ff455a64</color>
+    <color name="primary_color">#ff455a64</color>
 
     <!-- Color of the selected tab underline -->
     <color name="contacts_accent_color">#FFFFFF</color>
@@ -38,16 +38,16 @@
     <color name="floating_action_button_icon_color">@color/contacts_accent_color</color>
 
     <!-- Color of the separator between entries in an ExpandingEntryCardView -->
-    <color name="expanding_entry_card_item_separator_color">#1fffffff</color>
+    <color name="expanding_entry_card_item_separator_color">#ff37474f</color>
 
     <!-- Color of the text on an ExpandingEntryCard button -->
     <color name="expanding_entry_card_button_text_color">@android:color/white</color>
 
     <!-- Background color for an ExpandingEntryCard -->
-    <color name="expanding_entry_card_background_color">@*android:color/black</color>
+    <color name="expanding_entry_card_background_color">#ff000000</color>
 
     <!-- Color of the margin for cards -->
-    <color name="card_margin_color">@*android:color/material_blue_grey</color>
+    <color name="card_margin_color">#ff000000</color>
 
     <color name="call_arrow_green">#2aad6f</color>
     <color name="call_arrow_red">#ff2e58</color>
