--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -31,6 +31,7 @@
 
     <color name="primary_color_dark">#ff455a64</color>
     <color name="primary_color">#ff455a64</color>
+    <color name="secondary_text_color">#ffaaaaaa</color>
 
     <!-- Color of the selected tab underline -->
     <color name="contacts_accent_color">#FFFFFF</color>
